--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-hook-form": "^7.50.1",
+    "react-native": "^0.73.4",
+    "react-native-maps": "^1.10.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "typescript": "^5.1.3"
   },
   "private": true
